--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">NotesApp</string>
     <string name="notes">My Notes</string>
-    <string name="notes_title">Notes Title</string>
-    <string name="notes_sub_title">Notes Sub Title</string>
+    <string name="notes_title">Enter Notes Title</string>
+    <string name="notes_sub_title">Enter Notes Sub Title</string>
     <string name="notes_desc">Enter Note Here</string>
     <string name="web_url">Enter Web Url</string>
     <string name="ok">Ok</string>
